# APP5

./: .gitignore
.sonarlint/: connectedMode.json
AI/tp2/: ex.py  (+1 more)
Apprentissage_Automatise/: Projet_consignes.md  TP 1 - Scikit-Learn - Classification.ipynb  TP 2 - Scikit-Learn - Evaluation.ipynb  TP 3 - Intro Scikit-Learn - Regression.ipynb
Cybersec/: Analysis.md  Exploit_chain.md  Exploitation.md  Ubik Labs.md
Cybersec/MyPizzaApp/backend/: .bumpversion.cfg  .gitlab-ci.yml  Dockerfile  alembic.ini  pyproject.toml  start.sh
Cybersec/MyPizzaApp/backend/alembic/: env.py
Cybersec/MyPizzaApp/backend/alembic/versions/: 1557afcef623_add_pizza_and_comments_datas.py  5a37a834c668_initial_db_setup.py  60378a7987ab_add_pizza_and_comments.py
Cybersec/MyPizzaApp/backend/src/: flag
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/database/: helpers.py  service.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/database/comment/: repository.py  service.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/database/models/: __init__.py  base.py  comment.py  pizza.py  user.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/database/pizza/: repository.py  service.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/database/user/: repository.py  service.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/webserver/: app.py  config.py  tags.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/webserver/dependencies/: database.py  database_service.py  user.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/webserver/routers/: comment.py  pizza.py  security.py  user.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/webserver/schemas/: __init__.py  comment.py  pizza.py  user.py
Cybersec/MyPizzaApp/backend/src/awefull_pizza_shop/webserver/security/: cryptography.py  service.py
DataViz/: Assignement1.md  Assignement2.md  Assignement3.md  Assignement4.md  Assignement5.md  Ideas links.md  Perplexity_Research.md
Graphical/: Informatique Graphique.md  assignement_1.glsl  basic_shadertoy.glsl  extract_svg_shoreline.py  shoreline.json  shoreline_bezier.json  waves.glsl
Génie_Logiciel/: CR Reunion Viveris - 05_02_2026.md  DuoEco.plantuml  Point planification.md
Qualite/: Cours.md  TP1.md  TP2.md  TP3.md  TP3_tmp.html  TP4.md  pdf_prince_installer.sh
Reseaux_II/: TP1.md  TP2.md  page_break_markdown.css
Securite/: MODALITES.md  (+1 more)
(+288 files in other folders)
